# json-logic-haskell

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.doctest  Dockerfile.test  JsonLogic.cabal  LICENSE  README.md  cabal.project
.github/workflows/: HLint.yaml  Linting.yaml  Publish.yaml  Test.yaml  jsonlogic-aeson.yaml  jsonlogic.yaml
Docker/: Dockerfile.doctest  Dockerfile.error  Dockerfile.publish  Dockerfile.test
aeson/: CHANGELOG.md  Dockerfile  JsonAeson.hs  jsonlogic-aeson.cabal
aeson/JsonLogic/: Aeson.hs
aeson/src/JsonLogic/: Aeson.hs
aeson/test/: Generator.hs  Test.hs  Utils.hs
app/: Json.hs  JsonExamples.hs  JsonLogic.hs  JsonLogicIO.hs  Main.hs  Operations.hs
core/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  jsonlogic.cabal
core/src/: JsonLogic.hs
core/src/JsonLogic/: Evaluator.hs  JL.hs  Json.hs  Operation.hs  Operations.hs  Type.hs  Utils.hs
core/src/JsonLogic/IO/: Evaluator.hs  JL.hs  Mapping.hs  Operation.hs  Type.hs
core/src/JsonLogic/IO/Operation/: Misc.hs
core/src/JsonLogic/Operation/: Array.hs  Boolean.hs  Cat.hs  Data.hs  Filter.hs  If.hs  In.hs  Merge.hs  Misc.hs  Missing.hs  Negation.hs  Numeric.hs  Object.hs  Primitive.hs  Reduce.hs  String.hs  Substr.hs  Utils.hs  Var.hs
core/src/JsonLogic/Pure/: Evaluator.hs  JL.hs  Mapping.hs  Operation.hs  Type.hs
core/test/: Generators.hs  Test.hs  TestFilter.hs  TestIf.hs  TestJson.hs  TestShow.hs  TestStringify.hs  TestToNumber.hs  TestTruthy.hs  TestVar.hs  Utils.hs  test.hs
core/test/Generator/: Data.hs  Generic.hs  Logic.hs  Utils.hs
core/test/Operation/: Negation.hs  TestArrayChecks.hs  TestCat.hs  TestFilter.hs  TestIf.hs  TestIn.hs  TestMerge.hs  TestMissing.hs  TestMissingSome.hs  TestNegation.hs  TestPreserve.hs  TestReduce.hs  TestStringOps.hs  TestSubstr.hs  TestVar.hs
core/test/Operation/Array/: TestArrayChecks.hs  TestFilter.hs  TestIn.hs  TestMerge.hs  TestReduce.hs
core/test/Operation/Boolean/: TestEquality.hs  TestIf.hs  TestNegation.hs
core/test/Operation/Data/: TestMissing.hs  TestMissingSome.hs  TestPreserve.hs  TestVar.hs
core/test/Operation/String/: TestCat.hs  TestSubstr.hs
example/: CHANGELOG.md  example.cabal
example/app/: Main.hs
src/: Context.hs  Engine.hs  Error.hs  Evaluator.hs  JL.hs  Json.hs  JsonLogic.hs  JsonLogicIO.hs  JsonLogicMonad.hs  Operations.hs  ReturnJson.hs  Rule.hs  Utils.hs
test/: Generators.hs  test.hs
