cabal-version:      2.4
name:               JsonLogic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/JTeeuwissen/json-logic-haskell


-- The license under which the package is released.
-- license:
author:             Marien Matser, Gerard van Schie, Jelle Teeuwissen
maintainer:         jelleteeuwissen@hotmail.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library Logic
    exposed-modules:
        JsonLogic,
        JsonLogicIO,
        Json,
        Operations
    other-modules:
    default-language:
        Haskell2010
    ghc-options: -Wall
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:
        src
    build-depends:
        base,
        containers,
        mtl ^>= 2.2.2,
        aeson

Test-Suite Test
    main-is:
        test.hs
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    build-depends:
        base,
        Logic,
        tasty,
        tasty-hunit
