cabal-version:      2.4
name:               jsonlogic-aeson
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/JTeeuwissen/json-logic-haskell


-- The license under which the package is released.
-- license:
author:             Marien Matser, Gerard van Schie, Jelle Teeuwissen
maintainer:         jelleteeuwissen@hotmail.nl

-- A copyright notice.
-- copyright:
-- category:

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        JsonLogic.Aeson
    default-language:
        Haskell2010
    ghc-options: -Wall -Wno-orphans
if flag(llvm)
    ghc-options: -Werr
    hs-source-dirs:
        src
    build-depends:
        base >= 4.14.3.0,
        aeson,
        aeson-pretty,
        text,
        bytestring >= 0.11.2.0,
        utf8-string,
        jsonlogic,
        scientific,
        containers,
        vector

Test-Suite jsonlogic-aeson-tests
    main-is:
        Test.hs
    default-language:
        Haskell2010
    ghc-options: -Wall
if flag(llvm)
    ghc-options: -Werr
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    other-modules:
        Generator,
        Utils
    build-depends:
        base >= 4.14.3.0,
        jsonlogic,
        jsonlogic-aeson,
        tasty,
        tasty-hunit >= 0.10.0.3,
        tasty-hedgehog >= 1.2.0.0,
        hedgehog >= 1.1.1,
        containers
