cabal-version:      2.4
name:               jsonlogic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/JTeeuwissen/json-logic-haskell


-- The license under which the package is released.
-- license:
author:             Marien Matser, Gerard van Schie, Jelle Teeuwissen
maintainer:         jelleteeuwissen@hotmail.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        JsonLogic,
        JsonLogic.Json,
        JsonLogic.Operation
    other-modules:
        JsonLogic.JL,
        JsonLogic.Operation.Primitive,
        JsonLogic.Operation.Var,
        JsonLogic.Operation.Missing,
        JsonLogic.Operation.If,
        JsonLogic.Operation.Filter,
        JsonLogic.Operation.Utils
    default-language:
        Haskell2010
    ghc-options: -Wall
    hs-source-dirs:
        src
    build-depends:
        base >= 4.15.0.0,
        containers,
        mtl >= 2.2.2,

Test-Suite jsonlogic-tests
    main-is:
        Test.hs
    default-language:
        Haskell2010
    ghc-options: -Wall
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    other-modules:
        Generator.Data,
        Generator.Generic,
        Generator.Logic,
        Generator.Utils,
        TestVar,
        TestIf,
        TestFilter
    build-depends:
        base >= 4.15.0.0,
        jsonlogic,
        tasty,
        tasty-hunit >= 0.10.0.3,
        tasty-hedgehog,
        hedgehog >= 1.1.1,
        containers
