cabal-version:      2.4
name:               jsonlogic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/JTeeuwissen/json-logic-haskell


-- The license under which the package is released.
-- license:
author:             Marien Matser, Gerard van Schie, Jelle Teeuwissen
maintainer:         jelleteeuwissen@hotmail.nl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

flag error
  description: Error on ghc warnings
  default: False

library
    exposed-modules:
        JsonLogic.Evaluator,
        JsonLogic.Json,
        JsonLogic.Operation,
        JsonLogic.Type,
        JsonLogic.IO.JL,
        JsonLogic.IO.Evaluator,
        JsonLogic.IO.Operation,
        JsonLogic.IO.Type
    other-modules:
        JsonLogic.JL,
        JsonLogic.Operation.Array,
        JsonLogic.Operation.Boolean,
        JsonLogic.Operation.Data,
        JsonLogic.Operation.Misc,
        JsonLogic.Operation.Numeric,
        JsonLogic.Operation.Primitive,
        JsonLogic.Operation.String,
        JsonLogic.Operation.Utils

    default-language:
        Haskell2010
    ghc-options:
        -Wall
    hs-source-dirs:
        src
    build-depends:
        base >= 4.14.3.0,
        containers,
        mtl >= 2.2.2

    if flag(error)
        ghc-options:
            -Werror

Test-Suite jsonlogic-tests
    main-is:
        Test.hs
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    other-modules:
        -- Generators
        Generator.Data,
        Generator.Generic,
        Generator.Logic,
        Generator.Utils,
        -- Operation Tests
        Operation.Array.TestArrayChecks,
        Operation.Array.TestFilter,
        Operation.Array.TestIn,
        Operation.Array.TestMerge,
        Operation.Array.TestReduce,
        Operation.Boolean.TestIf,
        Operation.Boolean.TestNegation,
        Operation.Data.TestMissing,
        Operation.Data.TestMissingSome,
        Operation.Data.TestPreserve,
        Operation.Data.TestVar,
        Operation.String.TestCat,
        Operation.String.TestSubstr,
        TestStringify,
        TestToNumber,
        TestTruthy,
        Utils
    build-depends:
        base >= 4.14.3.0,
        jsonlogic,
        tasty,
        tasty-hunit >= 0.10.0.3,
        tasty-hedgehog >= 1.2.0.0,
        hedgehog >= 1.1.1,
        containers
            
    if flag(error)
        ghc-options:
            -Werror
