cabal-version:      2.4
name:               example
version:            0.1.0.0

synopsis:           Json Logic Example

bug-reports:        https://github.com/JTeeuwissen/json-logic-haskell

author:             Marien Matser, Gerard van Schie, Jelle Teeuwissen
maintainer:         jelleteeuwissen@hotmail.nl

extra-source-files: CHANGELOG.md

flag error
  description: Error on ghc warnings
  manual: True
  default: False

executable example
    main-is:
        Main.hs
    build-depends:
        base >= 4.14.3.0,
        jsonlogic >= 0.1.0 && < 0.2
    hs-source-dirs:
        app
    default-language:
        Haskell2010
    ghc-options:
        -Wall
    
    if flag(error)
        ghc-options:
            -Werror
